--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@storybook/test": "^8.2.8",
     "prop-types": "15.8.1",
     "storybook": "^8.2.8",
-    "typescript": "4.1.3",
+    "typescript": "^4.1.3",
     "webpack": "5.93.0"
   },
   "scripts": {
